# rusty-muscle

./: .env.test  Cargo.toml  docker-compose.yaml
.sqlx/: query-72d853465e27062f9b930487509166306e461cb84ad2ae569b57b0865e6b713f.json
migrations/: 20240309144321_initial_schema.down.sql  20240309144321_initial_schema.up.sql
src/: main.rs
src/models/: exercise.rs
src/repositories/: exercise.rs
tests/: exercises_tests.rs  test_utils.rs
