[package]
name = "rusty-muscle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
anyhow = "1.0.80"
